<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_AlarmHistCtrl" Id="{fa92a6fc-9b45-4012-a204-8487866fbb08}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AlarmHistCtrl
VAR_INPUT
	ptHist:POINTER TO ARRAY[1..toHMI.nLastHistAlarm] OF stAlarmHist;			//
									//
	ptActiveAlarms:POINTER TO ARRAY[1..80] OF ST_ReadEvent;	//

END_VAR
VAR_OUTPUT
END_VAR
VAR
	nActiveAlarmOld:UDINT;	//Number of active alarms on the last cycle
	i: UDINT;
	i2:UDINT;
	bLeaveLoop: BOOL;
	bUpdateHist:BOOL;
	nCurrAlarmNum: UDINT;
	nOldAlarmNum: UDINT;
	nActiveAlarms:UDINT;
	i3: UDINT;
END_VAR
//VAR CONSTANT
//	nLastHistAlarm:UINT:=1000;
//END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[nActiveAlarms:=0;
FOR i3:= 1 TO 80 DO
	IF ptActiveAlarms^[i3].nEventId <> 0 THEN
		nActiveAlarms:=i3;
	ELSE
		EXIT;	
	END_IF
END_FOR

IF nActiveAlarmOld <> nActiveAlarms AND nActiveAlarms> nActiveAlarmOld THEN
	nCurrAlarmNum:=nActiveAlarms;
	nOldAlarmNum:=nActiveAlarmOld;
	bUpdateHist:=TRUE;
END_IF

IF bUpdateHist THEN
		i:=nCurrAlarmNum;
		bLeaveLoop:=FALSE;
		WHILE NOT bLeaveLoop DO
			IF i <> nOldAlarmNum THEN
				FOR i2 := toHMI.nLastHistAlarm TO 2 BY -1 DO
					ptHist^[i2]:= ptHist^[i2-1];
				END_FOR
				ptHist^[1].sDate:=ptActiveAlarms^[i].sDate;
				ptHist^[1].sTime:=ptActiveAlarms^[i].sTime;
				ptHist^[1].sMessage:=ptActiveAlarms^[i].sMessageText;
			ELSE
				bLeaveLoop:=TRUE;
			END_IF
			i:=i-1;
		END_WHILE
	bUpdateHist:=FALSE;
END_IF

nActiveAlarmOld:=nActiveAlarms;]]></ST>
    </Implementation>
    <LineIds Name="FB_AlarmHistCtrl">
      <LineId Id="3" Count="33" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>